--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget16/stats-widget16.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget16/stats-widget16.component.html
@@ -242,7 +242,7 @@
               </div>
             </div>
           </div>
-          <table class="table table-centered table-nowrap">
+          <table class="table table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
             <thead>
               <tr>
                 <th style="text-align: left;border-width: 1px; border-color: #000;">Khata Name</th>
