--- a/src/app/_metronic/layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/_metronic/layout/components/header/header-menu/header-menu.component.html
@@ -13,7 +13,50 @@ ngbTooltip="Reffer & Earn" placement="bottom" (click)="openRefferalModal(refer)"
  Refer & Earn
 </button>
 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a style="margin-top: 1%;" *ngIf="accessGroup == '19' && primeDealerStatus == ''">
+  <button type="button" class="btn btn-info" style="width: max-content;"
+    (click)="cofirmToUpdate(cancelReq)">
+    Request For Prime Upgrade</button>
+
+</a>
+<a style="margin-top: 1%;" *ngIf="accessGroup == '19' && primeDealerStatus == 'Pending' ">
+  <button type="button" class="btn btn-info" style="width: max-content;">
+    Requested Already For Prime Upgrade </button>
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<span class="d-none d-xl-inline-block ms-1"> {{userName}} </span>
 </div>
+
+<ng-template #cancelReq let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <label>
+        <h4><strong>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+            Do You Want To Upgrade ?</strong></h4>
+      </label>
+    </h4>
+    <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="row">
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-2">
+        <button type="button" class="btn btn-outline-success my-2 my-sm-0" (click)="requestForLiteToPrime()">
+          Yes</button>
+      </div>
+      <div class="col-md-2">
+        <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">No</button>
+      </div>
+    </div>
+  </div>
+</ng-template>
 
 <ng-template #refer let-c="close" let-d="dismiss">
   <div class="modal-header">
