--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
@@ -279,7 +279,7 @@
                 <tr>
                   <td colspan="6">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Product</th>
@@ -378,7 +378,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Product</th>
@@ -442,7 +442,7 @@
                 <tr>
                   <td colspan="6">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Shift Sales (Rs)</th>
@@ -478,7 +478,7 @@
                 <tr>
                   <td colspan="8">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Shift Sales (Rs)</th>
@@ -513,7 +513,7 @@
                 <tr>
                   <td colspan="7">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">C-Cash (1+2+3) (Rs)</th>
@@ -552,7 +552,7 @@
                 <tr>
                   <td colspan="8">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Shift</th>
@@ -583,7 +583,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Shift</th>
@@ -620,7 +620,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Shift</th>
@@ -663,7 +663,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Shift</th>
@@ -773,7 +773,7 @@
                 <tr>
                   <td colspan="6">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Digital POS</th>
@@ -815,7 +815,7 @@
                 <tr>
                   <td colspan="6">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Sr No</th>
@@ -869,7 +869,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">A-Shift Sales (Rs)</th>
@@ -923,7 +923,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Sr No</th>
@@ -986,7 +986,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Khata Name</th>
@@ -1044,7 +1044,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Sr No</th>
@@ -1098,7 +1098,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Sr No</th>
@@ -1163,7 +1163,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Sr No</th>
@@ -1234,7 +1234,7 @@
                 <tr>
                   <td colspan="12">
                     <div class="table-responsive mb-0">
-                      <table class="table  table-centered table-nowrap">
+                      <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                         <thead class="table-light">
                           <tr>
                             <th style="text-align: left; border: 2px solid #272829;">Khata Name</th>
