--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget2/pump-tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget2/pump-tables-widget2.component.html
@@ -62,11 +62,11 @@
               <div class="col-md-2"></div>
               <div class="col-md-1">
                 <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
-                  (click)="exportToPDF()"><i class="fas fa-file-pdf"></i></span> <br>
+                  (click)="exportToPDF()"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span> <br>
               </div>
               <div class="col-md-1">
                 <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV" placement="bottom"
-                  (click)="excelDownload()"><i class="fas fa-file-csv"></i></span> <br>
+                  (click)="excelDownload()"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span> <br>
               </div>
             </div>
           </form>
