changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget2/feeds-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget2/feeds-widget2.component.html
@@ -55,7 +55,7 @@
                           <!-- <div *ngIf="dsrBookDetails.length" class="text-sm-end"> -->
                               <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV"
                                   placement="bottom" (click)="exportExcel()"><i
-                                      class="fas fa-file-csv"></i></span>
+                                      class="fas fa-file-csv" style="font-size: 30px;"></i></span>
 
                           <!-- </div> -->
                       </div>
