--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget10/stats-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget10/stats-widget10.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf="acceesGroup == '7'">
+<div class="container-fluid">
     <ul ngbNav #customNav="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 100%;">
         <li [ngbNavItem]="1">
             <a ngbNavLink>
@@ -31,7 +31,7 @@
                             <div class="card">
                                 <div class="card-body">
                                     <div class="row">
-                                        <div *ngIf="acceesGroup == '7'" class="col-md-10">
+                                        <div class="col-md-10">
                                             <span *ngIf="editCustDetails">
                                                 <div class="row">
                                                     <div class="col-md-6">
