--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -77,7 +77,7 @@
       <div class="col-md-1"></div>
       <div class="col-auto">
         <div class="table-responsive mb-0">
-          <table class="table table-centered table-nowrap">
+          <table class="table table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
             <thead>
               <tr>
                 <th *ngFor="let data of productWiseCRAmt" style="text-align: left; border: 2px solid #272829;">
