--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget11/feeds-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget11/feeds-widget11.component.html
@@ -97,7 +97,7 @@
                     </thead>
                     <tr>
                       <td colspan="5">
-                        <table class="table main-table">
+                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                           <thead *ngIf="meterSalesDetails">
                             <tr>
                               <th colspan="10"
@@ -231,7 +231,7 @@
                         </table>
                       </td>
                       <td colspan="5">
-                        <table class="table main-table">
+                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                           <thead *ngIf="lubeWiseDetails.length">
                             <tr>
                               <th colspan="10"
@@ -322,7 +322,7 @@
 
                     <tr>
                       <td colspan="5">
-                        <table class="table main-table" *ngIf="digitalDetails.length">
+                        <table class="table main-table" *ngIf="digitalDetails.length" style="border-collapse: collapse; border: 1px solid black;">
                           <thead>
                             <tr>
                               <th colspan="10"
@@ -363,7 +363,7 @@
                         </table>
                       </td>
                       <td colspan="5">
-                        <table class="table main-table" *ngIf="variationData.length">
+                        <table class="table main-table" *ngIf="variationData.length" style="border-collapse: collapse; border: 1px solid black;">
                           <thead>
                             <tr>
                               <th colspan="9"
@@ -402,7 +402,7 @@
 
                     <tr>
                       <td colspan="5">
-                        <table class="table main-table">
+                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                           <thead>
                             <tr>
                               <th colspan="10"
