--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget12/feeds-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget12/feeds-widget12.component.html
@@ -492,7 +492,7 @@ PUBLIC "-//W3C//Dth XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/Dt
                                 <div class="row" *ngIf = "isYear" >
                                     <div class="col-md-12">
                                     <div class="card-body table-responsive">
-                                        <table id="excel-table" class="table table-hover b">  
+                                        <table id="excel-table" class="table table-hover b" style="border-collapse: collapse; border: 1px solid black;">  
                                             <thead style="background-color: aquamarine;">
                                                 <tr>
                                                     <th style="border: 2px solid #272829; text-align: center;" colspan="2">
