--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget11/pump-tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget11/pump-tables-widget11.component.html
@@ -20,7 +20,7 @@
             <div class="row noprint">
                 <div class="col-md-8"></div>
                 <div class="col-auto">
-                    <button class="btn btn-success" onclick="window.print()">print</button>
+                    <button class="btn btn-success" printSectionId="sanjay" ngxPrint>print</button>
                 </div>
                 <div class="col-auto">
                     <button class="btn btn-outline-secondary my-2 my-sm-0 noprint" (click)="back()"> back </button>
@@ -48,10 +48,10 @@
                                                 </th>
                                                 <th colspan="6">
 
-                                                    <!-- <span>
+                                                    <span>
                                                         {{companyName}},{{city}} <br>
                                                         {{brandName}} Pump
-                                                    </span> -->
+                                                    </span>
 
                                                 </th>
                                                 <th colspan="3" style="text-align: right;">
@@ -73,7 +73,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="6">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">Product
@@ -182,7 +182,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="12">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">Product
@@ -248,7 +248,7 @@
                             <table *ngIf="totalMeterSalesDetails || totalAmountTally">
                                 <tr>
                                     <td colspan="6">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead>
                                                 <tr>
                                                     <th colspan="12">
@@ -291,7 +291,7 @@
                             <table *ngIf="totalMeterSalesDetails || totalAmountTally">
                                 <tr>
                                     <td colspan="8">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">Shift Sales
@@ -333,7 +333,7 @@
                             <table *ngIf="totalMeterSalesDetails || totalAmountTally">
                                 <tr>
                                     <td colspan="6">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">C-Cash
@@ -366,7 +366,7 @@
                             <table *ngIf="shiftWiseData">
                                 <tr>
                                     <td colspan="6">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead>
                                                 <tr>
                                                     <th colspan="12">
@@ -406,7 +406,7 @@
                             <table *ngIf="shiftWiseData">
                                 <tr>
                                     <td colspan="12">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">Shift</th>
@@ -450,7 +450,7 @@
                             <table *ngIf="shiftWiseData">
                                 <tr>
                                     <td colspan="12">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">Shift</th>
@@ -499,7 +499,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="6">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th colspan="1"
@@ -566,7 +566,7 @@
                             </table>
                             <br>
                             <br>
-                            <table *ngIf="totalLubeCash" class="table  table-centered table-nowrap"
+                            <table *ngIf="totalLubeCash" class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;"
                                 style="width: 90%;">
                                 <tr>
                                     <th colspan="12">
@@ -655,7 +655,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="6">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">Digital POS
@@ -701,7 +701,7 @@
                                 <tr>
                                     <td colspan="6">
                                         <div class="table-responsive mb-0">
-                                            <table class="table  table-centered table-nowrap">
+                                            <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                                                 <thead class="table-light">
                                                     <tr>
                                                         <th style="text-align: left; border: 2px solid #272829;">Sr No
@@ -771,7 +771,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="12">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">A-Shift
@@ -820,7 +820,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="12">
-                                        <table class="table main-table table-sm">
+                                        <table class="table main-table table-sm" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">Sr No</th>
@@ -893,7 +893,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="12">
-                                        <table class="table main-table">
+                                        <table class="table main-table" style="border-collapse: collapse; border: 1px solid black;">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th style="text-align: left; border: 2px solid #272829;">Khata Name
@@ -960,7 +960,7 @@
                                 <tr>
                                     <td colspan="12">
                                         <div class="table-responsive mb-0">
-                                            <table class="table  table-centered table-nowrap">
+                                            <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                                                 <thead class="table-light">
                                                     <tr>
                                                         <th style="text-align: left; border: 2px solid #272829;">Sr No
@@ -1029,7 +1029,7 @@
                                 <tr>
                                     <td colspan="12">
                                         <div class="table-responsive mb-0">
-                                            <table class="table  table-centered table-nowrap">
+                                            <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                                                 <thead class="table-light">
                                                     <tr>
                                                         <th style="text-align: left; border: 2px solid #272829;">Khata
@@ -1088,7 +1088,7 @@
                                 <tr>
                                     <td colspan="12">
                                         <div class="table-responsive mb-0">
-                                            <table class="table  table-centered table-nowrap">
+                                            <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                                                 <thead class="table-light">
                                                     <tr>
                                                         <th style="text-align: left; border: 2px solid #272829;">Sr No
@@ -1168,7 +1168,7 @@
                                 <tr>
                                     <td colspan="12">
                                         <div class="table-responsive mb-0">
-                                            <table class="table  table-centered table-nowrap">
+                                            <table class="table  table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                                                 <thead class="table-light">
                                                     <tr>
                                                         <th style="text-align: left; border: 2px solid #272829;">Sr No
