changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget10/feeds-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget10/feeds-widget10.component.html
@@ -165,7 +165,7 @@
                         </td>
                       </tr>
 
-                      <tr>
+                      <tr style="border-collapse: collapse; border: 1px solid black;">
                         <td colspan="6">
                           <thead>
                             <tr>
