--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -755,49 +755,53 @@
     <div *ngIf="isDSR" class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
-          <app-keenicon name="profile-circle" class="fs-2"></app-keenicon>
+          <app-keenicon name="element-plus" class="fs-2"></app-keenicon>
         </span>
-        <span class="menu-title" data-link="/crafted/account">DSR
+        <span class="menu-title">DSR
         </span>
         <span class="menu-arrow"></span>
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
-        <div *ngIf="isDsr" class="menu-item">
-          <div class="menu-link without-sub">
-            <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-              routerLink="/dsr/dsrDetails">
+        <div *ngIf="isDsr" class="menu-item menu-accordion">
+          <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
+            routerLink="/dsr/dsrDetails">
+            <span class="menu-link">
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
               </span>
-              <span class="menu-title">DSR
+              <span class="menu-title"> DSR
               </span>
-            </div>
-            <div *ngIf="accessGroupId == '19'">
+            </span>
+          </div>
+          <div *ngIf="accessGroupId == '19'">
+            <span class="menu-link">
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
               </span>
-              <span class="menu-title" (click)="alert()">DSR
+              <span class="menu-title" (click)="alert()"> DSR
               </span>
-            </div>
+            </span>
           </div>
         </div>
-        <div *ngIf="isTankDsr" class="menu-item">
-          <div class="menu-link without-sub">
-            <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
-              routerLink="/dsr/tkDSRDetails">
+        <div *ngIf="isTankDsr" class="menu-item menu-accordion">
+          <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
+            routerLink="/dsr/tkDSRDetails">
+            <span class="menu-link">
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
               </span>
-              <span class="menu-title">Tank DSR
+              <span class="menu-title"> Tank DSR
               </span>
-            </div>
-            <div *ngIf="accessGroupId == '19'">
+            </span>
+          </div>
+          <div *ngIf="accessGroupId == '19'">
+            <span class="menu-link">
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
               </span>
-              <span class="menu-title" (click)="alert()">Tank DSR
+              <span class="menu-title" (click)="alert()"> Tank DSR
               </span>
-            </div>
+            </span>
           </div>
         </div>
       </div>
