--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget17/stats-widget17.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget17/stats-widget17.component.html
@@ -268,12 +268,12 @@
               </div>
               <div style="margin-left: 90%" class="col-md-3">
                 <span *ngIf="isCarrierFound">
-                  <button class="btn btn-primary" (click)="submitNewCorp()">Next1</button>
+                  <button class="btn btn-primary" (click)="submitNewCorp()">Next</button>
                 </span>
                 <!-- </div> -->
                 <!-- <div *ngIf="!isCarrierFound" style="margin-left: 90%" class="col-md-3"> -->
                 <span *ngIf="!isCarrierFound">
-                  <button class="btn btn-primary" (click)="submit()">Next2</button>
+                  <button class="btn btn-primary" (click)="submit()">Next</button>
                 </span>
               </div>
             </div>
