--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -2048,3 +2048,103 @@
   <!--end::Menu-->
 </div>
 <!--end::Menu wrapper-->
+
+
+<!--begin::Menu wrapper-->
+<div *ngIf="isTransporter" id="kt_app_sidebar_menu_scroll" class="scroll-y my-5 mx-3" data-kt-scroll="true"
+  data-kt-scroll-activate="true" data-kt-scroll-height="auto"
+  data-kt-scroll-dependencies="#kt_app_sidebar_logo, #kt_app_sidebar_footer"
+  data-kt-scroll-wrappers="#kt_app_sidebar_menu" data-kt-scroll-offset="5px" data-kt-scroll-save-state="true">
+  <!--begin::Menu-->
+  <div class="menu menu-column menu-rounded menu-sub-indention fw-semibold fs-6" id="#kt_app_sidebar_menu"
+    data-kt-menu="true" data-kt-menu-expand="false">
+    <!-- Dashboard -->
+    <div class="menu-item">
+      <div class="menu-content pt-8 pb-2">
+        <span class="menu-section text-muted text-uppercase fs-8 ls-1"> DASHBOARD </span>
+      </div>
+    </div>
+    <div class="menu-item">
+      <a class="menu-link without-sub" routerLink="transporter/transDashboard" routerLinkActive="active">
+        <span class="menu-icon">
+          <app-keenicon name="element-11" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title" translate="DASHBOARD"></span>
+      </a>
+    </div>
+
+    <!-- Separator -->
+    <div class="menu-item">
+      <div class="menu-content pt-8 pb-2">
+        <span class="menu-section text-muted text-uppercase fs-8 ls-1"> </span>
+      </div>
+    </div>
+
+    <!-- FuelIn -->
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show" >
+      <span class="menu-link">
+        <span class="menu-icon">
+          <app-keenicon name="element-plus" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title">FUEL CREDIT
+        </span>
+        <span class="menu-arrow"></span>
+      </span>
+      <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="transporter/viewPetrolPump">
+          <span class="menu-link">
+            <span class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span class="menu-title" data-link="transporter/viewPetrolPump">View Petrol Pump
+            </span>
+          </span>
+        </div>
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="transporter/viewCreditPurchase">
+          <span class="menu-link">
+            <span class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span class="menu-title">View Credit Purchase
+            </span>
+          </span>
+        </div>
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="transporter/viewCreditPayment">
+          <span class="menu-link">
+            <span class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span class="menu-title">View Credit Payment
+            </span>
+          </span>
+        </div>
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="transporter/fuelLedger">
+          <span class="menu-link">
+            <span class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span class="menu-title">Fuel Ledger Transaction
+            </span>
+          </span>
+        </div>
+      </div>
+    </div>
+
+
+    <br><br><br><br>
+    <!-- Logout -->
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show"
+      routerLink="/auth/logout">
+      <span class="menu-link">
+        <span class="menu-icon">
+          <app-keenicon name="element-plus" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title">Sign Out
+        </span>
+      </span>
+    </div>
+
+    </div>
+  <!--end::Menu-->
+</div>
+<!--end::Menu wrapper-->
