changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -2096,7 +2096,7 @@
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
             </span>
-            <span class="menu-title" data-link="transporter/viewPetrolPump">View Petrol Pump
+            <span class="menu-title">View Petrol Pump
             </span>
           </span>
         </div>
