--- a/src/app/pages/Transporter/view-petrol-pump/view-petrol-pump.component.html
+++ b/src/app/pages/Transporter/view-petrol-pump/view-petrol-pump.component.html
@@ -1,1 +1,4 @@
-<p>view-petrol-pump works!</p>
+<div class="card-header">
+    <b>VIEW PETROL PUMP</b>
+</div>
+<app-trans-tables-widget6></app-trans-tables-widget6> 
